# autotool_study

./: Makefile.in  README.MD  configure  configure.ac  configure~
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.2  traces.3  traces.4
my_inc/: Makefile.am  Makefile.in  myadd.cc  myadd.h
src/: Makefile.am  Makefile.in  helper.cc  helper.cxx  helper.h  main.cc  main.cxx
